<resources>
    <string name="app_name">My Application</string>
    <string name="exercise">Exercise</string>
    <string name="add">Add</string>
    <string name="add_movie">Add Movie</string>
    <string name="search">Search</string>
    <string name="finish">Finish</string>
    <string name="movie_categories">Movie Categories</string>
    <string name="movie_name">Movie Name</string>
    <string name="select">Select</string>
    <string name="input_keyword">Input Keyword</string>
    <string name="result">Result</string>
    <string name="show">Show</string>
</resources>